--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -14,8 +14,8 @@ GraphOS provides schema pipeline tools to develop and deploy changes to your gra
 GraphOS provides the following schema governance tools:
 
 - [Schema checks](./schema-checks) identify breaking changes before you publish them. They can also determine when a potentially dangerous change is, in fact, safe.
-- [Schema linting](./schema-linter) ensures consistent, well-formed schemas. Automated linting lowers maintenance overheads and improves developer productivity. Linting can run as [part of schema checks](./schema-linter#linting-via-schema-checks) in GraphOS Studio and as [one-offs via the Rover CLI](./schema-linter#one-off-linting).
-- [Schema proposals](./schema-proposals) provide GraphOS-native schema change management. Team members propose changes which others review. The [proposal process](./schema-proposals#proposal-process) does more than just strengthen governance&mdash;it fosters cross-organization collaboration.
+- [Schema linting](./schema-linter) ensures consistent, well-formed schemas. Automated linting lowers maintenance overheads and improves developer productivity. You can run the linter as [part of schema checks](./schema-linter#linting-via-schema-checks) in GraphOS Studio and [one-off via the Rover CLI](./schema-linter#one-off-linting).
+- [Schema proposals](./schema-proposals) provide GraphOS-native schema change management. Team members propose changes to subgraph schemas, and others review and approve them before they're implemented. Schema proposals do more than just strengthen governance&mdash;they foster cross-organization collaboration.
 
 <EnterpriseFeature>
 
@@ -25,7 +25,7 @@ Schema proposals are only available with a [GraphOS Enterprise plan](https://www
 
 ## Schema delivery
 
-Schema delivery refers to the process of making your supergraph schema available to clients. You can publish schema changes [using the Rover CLI](./publishing-schemas) or [GraphOS Platform API](/graphos/platform-api). With the Rover command, you integrate publication into your continuous delivery pipeline.
+Schema delivery refers to the process of making your supergraph schema available to clients. You can publish schema changes [using the Rover CLI](./publishing-schemas) or [GraphOS Platform API](/graphos/platform-api). Using the Rover CLI command lets you integrate publication into your continuous delivery pipeline.
 
 To integrate other aspects of your supergraph configuration, such as your router configuration or federation version, GraphOS uses the concept of [**launches**](./launches). Schema publications trigger launches which you can monitor them from the **Launches** page in GraphOS Studio.
 
