--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -10,7 +10,7 @@ This page covers how to publish different kinds of schemas using the Rover CLI. 
 
 <Tip>
 
-Incorporate [schema proposals](./schema-proposals) into [schema checks](./schema-checks) to ensure your organization only publishes preapproved changes. [Learn more.](./schema-proposals/implementation#ensure-changes-match-an-approved-proposal)
+Incorporate [schema proposals](./schema-proposals) into [schema checks](./schema-checks) to ensure your organization only publishes approved changes. [Learn more.](./schema-proposals/implementation#ensure-changes-match-an-approved-proposal)
 
 </Tip>
 
