--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -27,15 +27,15 @@ GraphOS can perform the following types of schema checks:
 
 - [**Linter checks**](./schema-linter/): Analyze your proposed schema changes for violations of formatting rules and other GraphQL best practices.
 
-- [**Proposals checks**](./schema-proposals) (Enterprise only): Check whether your proposed schema changes have matching and approved [schema proposals](./schema-proposals).
+- [**Proposals checks**](./schema-proposals/configuration#configure-schema-checks) (Enterprise only): Check whether your proposed schema changes have matching and approved [schema proposals](./schema-proposals).
 
-- **[Contract checks](./contracts/)** (Enterprise only): When running schema checks on a source variant, also check whether your proposed schema changes will break any downstream contract variants.
+- **[Contract checks](./contract-setup/#run-contract-checks)** (Enterprise only): When running schema checks on a source variant, also check whether your proposed schema changes will break any downstream contract variants.
 
 Most of this article covers composition and operation checks.
 
 - For details on linter checks, see [Schema linting](./schema-linter/).
 - For details on proposals checks, see [Schema proposals check configuration](./schema-proposals/configuration#configure-schema-checks).
-- For details on contract checks, see [Contracts](./contracts/).
+- For details on contract checks, see [Contract checks](./contract-setup/#run-contract-checks).
 
 ## Prerequisites
 
