--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -83,7 +83,7 @@ GraphOS provides schema [pipeline tools](../delivery) to efficiently develop and
 
 ### Schema change management with proposals
 
-[Schema proposals](../delivery/proposals) provide GraphOS-native schema change management.
+[Schema proposals](../delivery/schema-proposals) provide GraphOS-native schema change management.
 The centralized proposal process fosters collaboration and strengthens schema governance:
 
 - Subgraph developers can propose changes in the context of the supergraph and use automated checks and reviewer feedback to validate them.
