--- a/src/content/shared/approved-schema-proposals.mdx
+++ b/src/content/shared/approved-schema-proposals.mdx
@@ -1,5 +1,11 @@
 Once a proposal receives the [minimum number of approvals](/graphos/delivery/schema-proposals/configuration#required-approvals), its status changes to **Approved**.
 
+<img
+  src="../graphos/img/schema-proposals/approved-proposal.jpg"
+  className="screenshot"
+  alt="An approved schema proposal in GraphOS Studio"
+/>
+
 <Note>
 
 Revisions made to an approved proposal don't change the **Approved** status of the proposal.
@@ -7,10 +13,4 @@ To set the proposal's status to **Open for feedback** or another status, [manual
 
 </Note>
 
-<img
-  src="../graphos/img/schema-proposals/approved-proposal.jpg"
-  className="screenshot"
-  alt="Approved schema proposal in Studio"
-/>
-
-Once a proposal is approved, your team can then begin [implementing the approved changes](/graphos/delivery/schema-proposals/implementation).
+Once a proposal is approved, your team can begin [implementing the approved changes](/graphos/delivery/schema-proposals/implementation).
